--- a/templates/inventory/add_item.html
+++ b/templates/inventory/add_item.html
@@ -2,6 +2,16 @@
 {% load static %}
 
 {% block body %}
+  {% if messages %}
+    {% for message in messages %}
+      <div class="alert alert-warning">{{ message }}</div>
+    {% endfor %}
+  {% endif %}
+  {% if job %}
+    <h2>Adding item for the job at:{{ job.address }} <br /> <span>Job ID: <a href=" {% url 'update_job' job.job_id %} ">{{ job.job_id }}</a></span></h2>
+  {% else %}
+    <h2>Adding item for no job</h2>
+  {% endif %}
   <section class="form-section">
     <form action="" method="POST" enctype="multipart/form-data" class="form-container">
       {% csrf_token %}
