--- a/templates/inventory/inventory.html
+++ b/templates/inventory/inventory.html
@@ -9,33 +9,33 @@
   {% endif %}
 
   <!-- Modern Form Section -->
+  {% if rjobs %}
+    {% for job in rjobs %}
+      {% if job.status != 'Ready' and job.items_arrived %}
+        <h2>Job ID: <a href="{% url 'update_job' job.job_id %}">{{ job.job_id }}</a> - Status: {{ job.get_status_display }} <small>"Required parts have arrived but the job isn't marked as Ready"</small></h2>
+      {% else %}
+        <h2>Job ID: <a href="{% url 'update_job' job.job_id %}">{{ job.job_id }}</a> - Status: {{ job.get_status_display }}</h2>
+        <h4><a href="{% url 'item_add' job.job_id %}">Add item</a></h4>
+      {% endif %}
+      <p>Address: {{ job.address }}</p>
+      <p>Parent Account: {{ job.parent_account }}</p>
+      <p>Added Date: {{ job.added_date }}</p>
+      <p>Company: {{ job.company }}</p>
 
-  {% for job in rjobs %}
-    {% if job.status != 'Ready' and job.items_arrived %}
-      <h2>Job ID: <a href="{% url 'update_job' job.job_id %}">{{ job.job_id }}</a> - Status: {{ job.get_status_display }} <small>"Required parts have arrived but the job isn't marked as Ready"</small></h2>
-    {% else %}
-      <h2>Job ID: <a href="{% url 'update_job' job.job_id %}">{{ job.job_id }}</a> - Status: {{ job.get_status_display }}</h2>
-      <h4><a href="{% url 'item_add' job.job_id %}">Add item</a></h4>
-    {% endif %}
-    <p>Address: {{ job.address }}</p>
-    <p>Parent Account: {{ job.parent_account }}</p>
-    <p>Added Date: {{ job.added_date }}</p>
-    <p>Company: {{ job.company }}</p>
-
-    <h3>Items: ({{ job.item_count }})</h3>
-    <ul>
-      {% for item in job.items.all %}
-        <li>
-          <a href="{% url 'update_item' item.id %}">{{ item.name }}</a> - Part Number: {{ item.part_number }} - Price: ${{ item.price }}
-          ({{ item.get_status_display }})
-        </li>
-      {% empty %}
-        <li>No items associated with this job.</li>
-      {% endfor %}
-    </ul>
-    <hr />
-  {% endfor %}
-
+      <h3>Items: ({{ job.item_count }})</h3>
+      <ul>
+        {% for item in job.items.all %}
+          <li>
+            <a href="{% url 'update_item' item.id %}">{{ item.name }}</a> - Part Number: {{ item.part_number }} - Price: ${{ item.price }}
+            ({{ item.get_status_display }})
+          </li>
+        {% empty %}
+          <li>No items associated with this job.</li>
+        {% endfor %}
+      </ul>
+      <hr />
+    {% endfor %}
+  {% endif %}
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   <script>
     document.addEventListener('DOMContentLoaded', function () {
