Fiexed user update

--- a/templates/inventory/admin_panel.html
+++ b/templates/inventory/admin_panel.html
@@ -1,44 +1,40 @@
 {% extends 'inventory/base.html' %}
-{% load static %}{% load custom_tags %}
-
+{% load static %}
+{% load custom_tags %}
 
 {% block body %}
-{% for group  in groups  %}
-
-<ul>
-    <li>{{group}}</li>
-  <ul  style="list-style-type:none;">
-        {% for user  in users  %}
-        {% if user|is_in_group:group %}
-        <li>{{user.id}},{{user}}, {{user.email}}<span><a href="{{user.id}}">Edit</a>✏</span></li>
-        {% endif %}
+  {% for group in groups %}
+    <ul>
+      <li>{{ group }}</li>
+      <ul style="list-style-type:none;">
+        {% for user in users %}
+          {% if user|is_in_group:group %}
+            <li>
+              {{ user.id }},{{ user }}, {{ user.email }}<span><a href="{{ user.id }}">Edit</a>✏</span>
+            </li>
+          {% endif %}
         {% endfor %}
-</ul>
-</ul>
+      </ul>
+    </ul>
+  {% endfor %}
+  <table>
+    <tr>
+      <td>
+        <strong>Id</strong>
+      </td>
+      <td>
+        <strong>Username</strong>
+      </td>
+    </tr>
 
-
-
-{% endfor %}
-<table>
-<tr>
-
-<td> <strong>Id</strong> </td>
-<td> <strong>Username</strong> </td>
-</tr>
-
-
-{% for user  in users  %}<tr>
-<td>
-    <p>Id[{{user.id}}] {{user}}
-
-
-    </p>
-
-</td></tr>
-{% endfor %}
-
-
-</table>
-
-
+    {% for user in users %}
+      <tr>
+        <td>
+          <p>
+            Id[{{ user.id }}] <a href="{{ user.id }}">{{ user }}</a>
+          </p>
+        </td>
+      </tr>
+    {% endfor %}
+  </table>
 {% endblock %}
