--- a/templates/inventory/update_user.html
+++ b/templates/inventory/update_user.html
@@ -1,34 +1,37 @@
 {% extends 'inventory/base.html' %}
 {% load static %}
-
+{% load custom_tags %}
 {% block body %}
-{% for message in messages  %}
-<div class="alert alert-{{ message.tags }}">
-    {{ message }}
-</div>
-{% endfor %}
-<H3>Update user</H3>
-<!-- Modern Form Section -->
-<section class="form-section">
+  {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+  {% endfor %}
+  <H3>Update user</H3>
+  {% if user|is_in_group:'Ban' %}
+    <h2><span style="
+        display: inline-block;
+        padding: 5px 10px;
+        font-size: 1.2rem;
+        font-weight: normal;
+        color: #333;
+        background-color: rgb(255, 66, 66);
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      ">Banned</span></h2>
+  {% endif %}
+  <!-- Modern Form Section -->
+  <section class="form-section">
     <form action="" method="POST" enctype="multipart/form-data" class="form-container">
-        {% csrf_token %}
-        <div class="form-group">
-            {{ itemform }} 
-        </div>
-        <div class="form-group">
-            {{ form.as_p }}
-        </div>
-        
-        
-        <div class="form-group">
-            
-            <button type="submit" class="btn-submit">Update</button>
-        </div>
+      {% csrf_token %}
+      <div class="form-group">{{ itemform }}</div>
+      <div class="form-group">{{ form.as_p }}</div>
+
+      <div class="form-group">
+        <button type="submit" class="btn-submit">Update</button>
+      </div>
     </form>
-</section>
+  </section>
 
-
-<!-- Job Summary Section -->
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
-
+  <!-- Job Summary Section -->
+  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 {% endblock %}
