Fixed some issues 21/4/2025

--- a/templates/inventory/inventory.html
+++ b/templates/inventory/inventory.html
@@ -11,10 +11,22 @@
   <!-- Modern Form Section -->
   {% if rjobs %}
     {% for job in rjobs %}
-      {% if job.status != 'ready' and job.items_arrived %}
+      {% if job.status != 'ready' and job.items_arrived and job.status != 'completed' %}
         <h2>Job ID: <a href="{% url 'update_job' job.job_id %}">{{ job.job_id }}</a> - Status: {{ job.get_status_display }} <small>"Required parts have arrived but the job isn't marked as Ready"</small></h2>
       {% elif job.status == 'ready' and not job.items_arrived %}
         <h2>Job ID: <a href="{% url 'update_job' job.job_id %}">{{ job.job_id }}</a> - Status: {{ job.get_status_display }} <small>"Required parts have not arrived but the job is marked as Ready"</small></h2>
+      {% elif job.status == 'completed' %}
+        <h2>Job ID: <a href="{% url 'update_job' job.job_id %}">{{ job.job_id }}</a> - Status: {{ job.get_status_display }} <small style="
+        display: inline-block;
+        padding: 5px 10px;
+        font-size: 1.2rem;
+        font-weight: normal;
+        color: #333;
+        background-color: rgb(71, 197, 102);
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        box-shadow: 0 1px 3px rgba(255, 255, 255, 0.1);
+      ">"Job is done"</small></h2>
       {% else %}
         <h2>Job ID: <a href="{% url 'update_job' job.job_id %}">{{ job.job_id }}</a> - Status: {{ job.get_status_display }}</h2>
         <h4><a href="{% url 'item_add' job.job_id %}">Add item</a></h4>
@@ -29,7 +41,20 @@
         {% for item in job.items.all %}
           <li>
             <a href="{% url 'update_item' item.id %}">{{ item.name }}</a> - Part Number: {{ item.part_number }} - Price: ${{ item.price }}
-            ({{ item.get_status_display }})
+            ({{ item.get_status_display }}){% if item.is_used %}
+              <span style="
+        display: inline-block;
+        padding: 5px 10px;
+        margin-left: 10px;
+        font-size: 1.2rem;
+        font-weight: normal;
+        color: #333;
+        background-color: rgba(182, 182, 182, 0.79);
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      ">Used</span>
+            {% endif %}
           </li>
         {% empty %}
           <li>No items associated with this job.</li>
