--- a/templates/inventory/inventory.html
+++ b/templates/inventory/inventory.html
@@ -43,17 +43,18 @@
             <a href="{% url 'update_item' item.id %}">{{ item.name }}</a> - Part Number: {{ item.part_number }} - Price: ${{ item.price }}
             ({{ item.get_status_display }}){% if item.is_used %}
               <span style="
-        display: inline-block;
-        padding: 5px 10px;
-        margin-left: 10px;
-        font-size: 1.2rem;
-        font-weight: normal;
-        color: #333;
-        background-color: rgba(182, 182, 182, 0.79);
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            display: inline-block;
+    padding: 1px 10px;
+    margin-left: 10px;
+    font-size: 1.2rem;
+    font-weight: normal;
+    color: #333;
+    background-color: rgba(182, 182, 182, 0.79);
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
       ">Used</span>
+              {{ item.notes }}
             {% endif %}
           </li>
         {% empty %}
