--- a/templates/inventory/update_item.html
+++ b/templates/inventory/update_item.html
@@ -23,6 +23,33 @@
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   ">{{ item.part_number }}</span>
+    {% if item.status == 'arrived' %}
+      <span style="
+    display: inline-block;
+    padding: 5px 10px;
+    margin-left: 10px;
+    font-size: 1.2rem;
+    font-weight: normal;
+    color: #333;
+    background-color:rgba(5, 122, 1, 0.79);
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(255, 255, 255, 0.1);
+  ">{{ item.status }}</span>
+    {% else %}
+      <span style="
+    display: inline-block;
+    padding: 5px 10px;
+    margin-left: 10px;
+    font-size: 1.2rem;
+    font-weight: normal;
+    color: rgb(0, 0, 0);
+    background-color:rgba(124, 119, 119, 0.79);
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(255, 253, 253, 0.1);
+  ">{{ item.status }}</span>
+    {% endif %}
   </h2>
 
   <section class="form-section">
@@ -47,10 +74,18 @@
       </form>
     </form>
     {% if not completed %}
-      <form action="{% url 'update_item' item.id %}" method="POST" class="delete-form">
-        {% csrf_token %}
-        <button name="delete" type="submit" class="btn btn-danger">Delete</button>
-      </form>
+      <span>
+        <form action="{% url 'update_item' item.id %}" method="POST" class="delete-form" style="display: inline;">
+          {% csrf_token %}
+          <button name="delete" type="submit" class="btn btn-danger">Delete</button>
+          {% comment %}
+        </form>
+        <form action="{% url 'update_item' item.id %}" method="POST" class="delete-form" style="display: inline;">
+          {% endcomment %}
+          {% comment %} {% csrf_token %} {% endcomment %}
+          <button name="move_item" type="submit" class="btn btn-submit">Move</button>
+        </form>
+      </span>
     {% endif %}
   </section>
 
