--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,7 +29,7 @@ h4 {
     margin-bottom: 15px;
 }
 
-.btn-submit {
+/* .btn-submit {
     background: #007bff;
     color: #fff;
     padding: 10px 20px;
@@ -38,7 +38,7 @@ h4 {
     font-size: 16px;
     cursor: pointer;
     transition: background 0.3s;
-}
+} */
 
 .btn-submit:hover {
     background: #0056b3;
