--- a/templates/auths/register_company.html
+++ b/templates/auths/register_company.html
@@ -1,24 +1,22 @@
-
 {% extends 'inventory/base.html' %}
 {% load static %}
 
 {% block body %}
-
-<h1>Signup</h1>
-{% if messages %}
+  <h1>Signup</h1>
+  {% if messages %}
     {% for message in messages %}
-        <div class="alert alert-{{ message.tags }}">
-            {{ message }}
-        </div>
+      <div class="alert alert-{{ message.tags }}">{{ message }}</div>
     {% endfor %}
-  {%endif%}
-<form action="" method="POST">
-{% csrf_token %}
-{{company_form.as_p}}
-{{user_form.as_p}}
-  <button type="submit" class="btn btn-primary">Signup</button>
-</form>
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-{% endblock body %}
+  {% endif %}
+  <form action="" method="POST">
+    {% csrf_token %}
+    {{ company_form.as_p }}
+    {{ user_form.as_p }}
+    <button type="submit" class="btn btn-primary">Signup</button><Span>
+      Already a user? <a href="{% url 'login' %}">Login</a>
+    </Span>
+  </form>
+  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+{% endblock %}
