--- a/templates/inventory/base.html
+++ b/templates/inventory/base.html
@@ -50,7 +50,7 @@
                   </li>
                 {% else %}
                   <li class="nav-item">
-                    <a class="nav-link fw-bold text-light" href="{% url 'update_company' request.user.company.id %}">{{ request.user.company.company_name }}</a>
+                    <a class="nav-link fw-bold text-light" href="{% url 'update_company' %}">{{ request.user.company.company_name }}</a>
                   </li>
                 {% endif %}
               {% endif %}
